# bchat

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.cpu.yml  docker-compose.vllm.yml  docker-compose.yml
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: container.yml  lint.yml  test.yml
backend/: Cargo.toml
backend/src/: app.rs  chat.rs  error.rs  main.rs  mcp_routes.rs  models.rs
backend/src/mcp/: mod.rs
backend/src/providers/: mod.rs
backend/tests/fixtures/: mock_mcp_server.py
frontend/: .prettierignore  Dockerfile  eslint.config.js  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html  vitest.setup.ts
frontend/src/lib/: api.errors.test.ts  api.test.ts  api.ts  conversations.test.ts  conversations.ts  page-chats.test.ts  page-settings.test.ts  storage.test.ts  storage.ts  tokenSpeed.test.ts  tokenSpeed.ts  types.test.ts  types.ts
frontend/src/lib/components/: McpPanel.svelte  McpPanel.test.ts  SettingsModal.svelte  SettingsModal.test.ts
frontend/src/routes/: +layout.ts  +page.svelte
